--- a/css/firma1.css
+++ b/css/firma1.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 a {
     color: #fff;
 }
@@ -57,7 +59,7 @@ a:hover {
     background: #000;
     color: #fff;
     text-transform: uppercase;
-    font: 10px roboto;
+    font: 10px Roboto;
     padding: 2px;
     text-align: center;
     margin: 2px;
